--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "at.js": "^1.5.4",
+    "highlight.js": "^9.12.0",
     "jquery.caret": "^0.3.1",
     "moment": "^2.29.1",
     "trix": "^1.3.1",
