--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 /backups
 /node_modules
 /public/storage
+/public/hot
+/public/css/app.css
+/public/fonts
+/public/js/app.js
 /storage/*.key
 /vendor
 /.idea
