--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,9 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
+SCOUT_DRIVER=null
+SCOUT_QUEUE=true
+QUEUE_DRIVER=database
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
